# src/main/java/io/confluent/idesidecar/restapi/models/ConnectionSpec.java
@@ -1,11 +1,13 @@
 package io.confluent.idesidecar.restapi.models;
 
+import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import io.confluent.idesidecar.restapi.exceptions.Failure.Error;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
+import java.util.Properties;
 import org.eclipse.microprofile.openapi.annotations.media.Schema;
 
 @JsonInclude(JsonInclude.Include.NON_NULL)
@@ -14,7 +16,8 @@ public record ConnectionSpec(
     String name,
     ConnectionType type,
     @JsonProperty("ccloud_config") CCloudConfig ccloudConfig,
-    @JsonProperty("local_config") LocalConfig localConfig
+    @JsonProperty("local_config") LocalConfig localConfig,
+    @JsonProperty("cp_config") ConfluentPlatformConfig cpConfig
 ) {
 
   public enum ConnectionType {
@@ -24,15 +27,15 @@ public record ConnectionSpec(
   }
 
   public ConnectionSpec(String id, String name, ConnectionType type) {
-    this(id, name, type, null, null);
+    this(id, name, type, null, null, null);
   }
 
   public ConnectionSpec withId(String id) {
-    return new ConnectionSpec(id, name, type, ccloudConfig, localConfig);
+    return new ConnectionSpec(id, name, type, ccloudConfig, localConfig, cpConfig);
   }
 
   public ConnectionSpec withName(String name) {
-    return new ConnectionSpec(id, name, type, ccloudConfig, localConfig);
+    return new ConnectionSpec(id, name, type, ccloudConfig, localConfig, cpConfig);
   }
 
   /**
@@ -40,7 +43,8 @@ public record ConnectionSpec(
    * Confluent Cloud organization ID set in the CCloudConfig.
    */
   public ConnectionSpec withCCloudOrganizationId(String ccloudOrganizationId) {
-    return new ConnectionSpec(id, name, type, new CCloudConfig(ccloudOrganizationId), localConfig);
+    return new ConnectionSpec(id, name, type, new CCloudConfig(ccloudOrganizationId), localConfig,
+        cpConfig);
   }
 
   public String ccloudOrganizationId() {
@@ -58,6 +62,32 @@ public record ConnectionSpec(
   public record LocalConfig(
       @JsonProperty(value = "schema-registry-uri") String schemaRegistryUri
   ) {
+  }
+
+  // TODO: This is temporarily added for proving out the Kafka REST implementation
+  @Schema(description = "Configuration for Confluence Platform connections")
+  public record ConfluentPlatformConfig(
+      @JsonProperty(value = "bootstrap_servers") String bootstrapServers
+  ) {
+  }
+
+  @JsonIgnore
+  public Properties getAdminClientConfig() {
+    var props = new Properties();
+    switch (type) {
+      case PLATFORM -> {
+        props.put("bootstrap.servers", cpConfig.bootstrapServers());
+      }
+      case LOCAL, CCLOUD -> {
+        throw new UnsupportedOperationException(
+            "We use the provided Kafka REST server for Confluent Local and Confluent Cloud "
+                + "connections instead of our own Kafka REST implementation. "
+                + "This method should not be called for these connection types."
+        );
+      }
+      default -> throw new UnsupportedOperationException("Unknown connection type: " + type);
+    }
+    return props;
   }
 
   /**
@@ -79,6 +109,10 @@ public record ConnectionSpec(
     if (newSpec.ccloudConfig() != null && newSpec.type() != ConnectionType.CCLOUD) {
       errors.add(Error.create().withDetail("CCloud config cannot be set for non-CCloud connections")
           .withSource("ccloud_config"));
+    }
+    if (newSpec.cpConfig() != null && newSpec.type() != ConnectionType.PLATFORM) {
+      errors.add(Error.create().withDetail("CP config cannot be set for non-CP connections")
+          .withSource("cp_config"));
     }
     return errors;
   }
